# AgriTech---USGS-LIDAR

./: README.md  dem-color.png.aux.xml  pipeline.json
Data/AK_BrooksCamp_2012/ept-data/: 4-4-14-7.laz  4-9-5-7.laz  5-0-26-15.laz  5-0-27-15.laz  5-1-22-15.laz  5-1-23-15.laz  5-11-15-15.laz  5-11-21-15.laz  5-11-27-15.laz  5-12-13-15.laz  5-12-19-15.laz  5-12-20-15.laz  5-12-22-15.laz  5-13-12-15.laz  5-13-14-15.laz  5-13-15-15.laz  5-13-16-15.laz  5-13-19-15.laz  5-14-10-15.laz  5-14-12-15.laz  5-14-20-15.laz  5-15-10-15.laz  5-15-11-15.laz  5-15-14-15.laz  5-15-15-15.laz  5-15-21-15.laz  5-16-12-15.laz  5-16-13-15.laz  5-16-15-15.laz  5-16-22-15.laz  5-16-9-15.laz  5-17-10-15.laz  5-17-19-15.laz  5-17-20-15.laz  5-17-8-15.laz  5-18-14-15.laz  5-18-22-15.laz  5-19-12-15.laz  5-19-13-15.laz  5-19-14-15.laz  (+2052 more)
Figures/: dec.tif
Notebooks/: fetch_data.ipynb  visual.ipynb
Scripts/: file_handler.py  ground_filter.json
package/: README.md  pyproject.toml
package/src/agritech_api_package01/: get_region.py
package/src/agritech_api_package01.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
