[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agritech_api_package01"
version = "0.0.1"
authors = [
  { name="rehmet", email="toygame8888@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RYees/AgriTech---USGS-LIDAR"
"Bug Tracker" = "https://github.com/RYees/AgriTech---USGS-LIDAR/issues"